# SQL2Pandas-Transpiler

./: .gitignore  README.md  makefile  pyproject.toml
grammar/: Grammar.g4
sql2pandas/: cli.py  visitor.py
test/: test_select.py  valid_query_01.sql  valid_query_02.sql
