[project]
name = "sql2pandas-transpiler"
version = "0.1.0"
description = "sql2pandas-transpiler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "antlr4-python3-runtime==4.13.1",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[project.scripts]
sql2pandas = "sql2pandas.cli:main"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["sql2pandas*"]
